--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
-  "name": "SideStore Official",
-  "identifier": "com.SideStore.SideStore",
-  "sourceURL": "https://raw.githubusercontent.com/SideStore/apps.json/main/app.json",
+  "name": "AltStore",
+  "identifier": "com.rileytestut.AltStore",
+  "sourceURL": "https://cdn.altstore.io/file/altstore/apps.json",
   "apps": [
     {
-      "name": "SideStore",
-      "bundleIdentifier": "com.SideStore.SideStore",
-      "developerName": "SideTeam",
-      "version": "1.5.1b",
+      "name": "AltStore",
+      "bundleIdentifier": "com.rileytestut.AltStore",
+      "developerName": "Riley Testut",
+      "version": "1.5.1",
       "versionDate": "2022-07-14T12:00:00-05:00",
-      "versionDescription": "This update fixes the following issues:\n\n• Using Apple IDs that contain capital letters\n• Using Apple IDs with 2FA enabled without any trusted devices\n• Repeatedly asking some users to sign in every refresh\n• \"Incorrect Apple ID or password\" error after changing Apple ID email address\n• “Application is missing application-identifier” error when sideloading or (de-)activating certain apps\n• Potential crash when receiving unknown error codes from AltServer",
+      "versionDescription": "This update fixes the following issues:\n\nâ€¢ Using Apple IDs that contain capital letters\nâ€¢ Using Apple IDs with 2FA enabled without any trusted devices\nâ€¢ Repeatedly asking some users to sign in every refresh\nâ€¢ \"Incorrect Apple ID or password\" error after changing Apple ID email address\nâ€¢ â€œApplication is missing application-identifierâ€ error when sideloading or (de-)activating certain apps\nâ€¢ Potential crash when receiving unknown error codes from AltServer",
       "downloadURL": "https://cdn.altstore.io/file/altstore/apps/altstore/1_5_1.ipa",
       "localizedDescription": "AltStore is an alternative app store for non-jailbroken devices. \n\nThis version of AltStore allows you to install Delta, an all-in-one emulator for iOS, as well as sideload other .ipa files from the Files app.",
       "iconURL": "https://user-images.githubusercontent.com/705880/65270980-1eb96f80-dad1-11e9-9367-78ccd25ceb02.png",
@@ -38,7 +38,7 @@
       "subtitle": "An alternative App Store for iOS.",
       "version": "1.5.1b",
       "versionDate": "2022-05-27T12:00:00-07:00",
-      "versionDescription": "This beta fixes the following issues:\n\n• Using Apple IDs that contain capital letters\n• Using Apple IDs with 2FA enabled without any trusted devices\n• Repeatedly asking some users to sign in every refresh\n• \"Incorrect Apple ID or password\" error after changing Apple ID email address\n• “Application is missing application-identifier” error when sideloading or (de-)activating certain apps",
+      "versionDescription": "This beta fixes the following issues:\n\nâ€¢ Using Apple IDs that contain capital letters\nâ€¢ Using Apple IDs with 2FA enabled without any trusted devices\nâ€¢ Repeatedly asking some users to sign in every refresh\nâ€¢ \"Incorrect Apple ID or password\" error after changing Apple ID email address\nâ€¢ â€œApplication is missing application-identifierâ€ error when sideloading or (de-)activating certain apps",
       "downloadURL": "https://cdn.altstore.io/file/altstore/apps/altstore/1_5_1_b.ipa",
       "localizedDescription": "AltStore is an alternative app store for non-jailbroken devices. \n\nThis beta release of AltStore adds support for 3rd party sources, allowing you to download apps from other developers directly through AltStore.",
       "iconURL": "https://user-images.githubusercontent.com/705880/65270980-1eb96f80-dad1-11e9-9367-78ccd25ceb02.png",
@@ -62,15 +62,68 @@
       ]
     },
     {
+      "name": "Delta",
+      "bundleIdentifier": "com.rileytestut.Delta",
+      "developerName": "Riley Testut",
+      "subtitle": "Classic games in your pocket.",
+      "version": "1.3.1",
+      "versionDate": "2021-12-02T13:30:00-08:00",
+      "versionDescription": "â€¢ Fixes game artwork not loading\nâ€¢ Fixes using deprecated DeSmuME core over melonDS core for some users",
+      "downloadURL": "https://cdn.altstore.io/file/altstore/apps/delta/1_3_1.ipa",
+      "localizedDescription": "Delta is an all-in-one emulator for iOS. Delta builds upon the strengths of its predecessor, GBA4iOS, while expanding to include support for more game systems such as NES, SNES, and N64.\n\nFEATURES\n\nSupported Game Systems\nâ€¢ Nintendo Entertainment System\nâ€¢ Super Nintendo Entertainment System\nâ€¢ Nintendo 64\nâ€¢ Game Boy (Color)\nâ€¢ Game Boy Advance\nâ€¢ Nintendo DS\nâ€¢ And plenty more to come!\n\nController Support\nâ€¢ Supports PS4, PS5, Xbox One S, Xbox Series X, and MFi game controllers.\nâ€¢ Supports bluetooth (and wired) keyboards, as well as the Apple Smart Keyboard.\nâ€¢ Completely customize button mappings on a per-system, per-controller basis.\nâ€¢ Map buttons to special â€œQuick Saveâ€, â€œQuick Load,â€ and â€œFast Forwardâ€ actions.\n\nSave States\nâ€¢ Save and load save states for any game from the pause menu.\nâ€¢ Lock save states to prevent them from being accidentally overwritten.\nâ€¢ Automatically makes backup save states to ensure you never lose your progress.\nâ€¢ Support for â€œQuick Saves,â€ save states that can be quickly saved/loaded with a single button press (requires external controller).\n\nCheats\nâ€¢ Supports various types of cheat codes for each supported system:\nâ€¢ NES: Game Genie\nâ€¢ SNES: Game Genie, Pro Action Replay\nâ€¢ N64: GameShark\nâ€¢ GBC: Game Genie, GameShark\nâ€¢ GBA: Action Replay, Code Breaker, GameShark\nâ€¢ DS: Action Replay\n\nDelta Sync\nâ€¢ Sync your games, game saves, save states, cheats, controller skins, and controller mappings between devices.\nâ€¢ View version histories of everything you sync and optionally restore them to earlier versions.\nâ€¢ Supports both Google Drive and Dropbox.\n\nCustom Controller Skins\nâ€¢ Beautiful built-in controller skins for all systems.\nâ€¢ Import controller skins made by others, or even make your own to share with the world!\n\nHold Button\nâ€¢ Choose buttons for Delta to hold down on your behalf, freeing up your thumbs to press other buttons instead.\nâ€¢ Perfect for games that typically require one button be held down constantly (ex: run button in Mario games, or the A button in Mario Kart).\n\nFast Forward\nâ€¢ Speed through slower parts of games by running the game much faster than normal.\nâ€¢ Easily enable or disable from the pause menu, or optionally with a mapped button on an external controller.\n\n3D/Haptic Touch\nâ€¢ Use 3D or Haptic Touch to â€œpeekâ€ at games, save states, and cheat codes.\nâ€¢ App icon shortcuts allow quick access to your most recently played games, or optionally customize the shortcuts to always include certain games.\n\nGame Artwork\nâ€¢ Automatically displays appropriate box art for imported games.\nâ€¢ Change a gameâ€™s artwork to anything you want, or select from the built-in game artwork database.\n\nMisc.\nâ€¢ Gyroscope support (WarioWare: Twisted! only)\nâ€¢ Microphone support (DS only)\nâ€¢ Support for delta:// URL scheme to jump directly into a specific game.\n\n**Delta and AltStore LLC are in no way affiliated with Nintendo. The name \"Nintendo\" and all associated game console names are registered trademarks of Nintendo Co., Ltd.**",
+      "iconURL": "https://user-images.githubusercontent.com/705880/63391976-4d311700-c37a-11e9-91a8-4fb0c454413d.png",
+      "tintColor": "8A28F7",
+      "size": 19739373,
+      "permissions": [
+        {
+          "type": "photos",
+          "usageDescription": "Allows Delta to use images from your Photo Library as game artwork."
+        }
+      ],
+      "screenshotURLs": [
+        "https://user-images.githubusercontent.com/705880/65600448-f7d9be00-df54-11e9-9e3e-d4c31296da94.PNG",
+        "https://user-images.githubusercontent.com/705880/65813009-f2ae8600-e183-11e9-9eb7-704effc11173.png",
+        "https://user-images.githubusercontent.com/705880/65601117-58b5c600-df56-11e9-9c19-9a5ba5da54cf.PNG",
+        "https://user-images.githubusercontent.com/705880/65601125-5b182000-df56-11e9-9e7e-261480e893c0.PNG"
+      ]
+    },
+    {
+      "name": "Delta",
+      "bundleIdentifier": "com.rileytestut.Delta.Beta",
+      "developerName": "Riley Testut",
+      "subtitle": "Classic games in your pocket.",
+      "version": "1.4b2",
+      "versionDate": "2022-08-16T08:00:00-05:00",
+      "versionDescription": "NEW\nâ€¢ Supports Split View and Stage Manager multitasking on iPad\nâ€¢ Automatically pauses + resumes emulation when switching between foreground apps with Stage Manager\nâ€¢ Optimized full screen-width controller skins when using Split View, Slide Over, or Stage Manager\nâ€¢ Supports controller skins with new `placement` parameter\nâ€¢ Supports controller skins with custom screens that donâ€™t have explicit `outputFrame`\n\nFIXED\nâ€¢ Fixed not detecting keyboard presses when remapping inputs\nâ€¢ Fixed potential crash rendering game screen after changing EAGLContext\nâ€¢ Fixed incorrect game screen frame when software keyboard appears on iOS 16\nâ€¢ Fixed software keyboard sometimes appearing when not emulating anything",
+      "downloadURL": "https://cdn.altstore.io/file/altstore/apps/delta/1_4_b2.ipa",
+      "localizedDescription": "The next consoles for Delta are coming: this beta version of Delta brings support for playing Nintendo DS and Sega Genesis games!\n\nPlease report any issues you find to support@altstore.io. Thanks!",
+      "iconURL": "https://user-images.githubusercontent.com/705880/63391976-4d311700-c37a-11e9-91a8-4fb0c454413d.png",
+      "tintColor": "8A28F7",
+      "size": 42968657,
+      "beta": true,
+      "permissions": [
+        {
+          "type": "photos",
+          "usageDescription": "Allows Delta to use images from your Photo Library as game artwork."
+        }
+      ],
+      "screenshotURLs": [
+        "https://user-images.githubusercontent.com/705880/65600448-f7d9be00-df54-11e9-9e3e-d4c31296da94.PNG",
+        "https://user-images.githubusercontent.com/705880/65601942-e5ad4f00-df57-11e9-9255-1463e0296e46.PNG",
+        "https://user-images.githubusercontent.com/705880/65813009-f2ae8600-e183-11e9-9eb7-704effc11173.png",
+        "https://user-images.githubusercontent.com/705880/65601117-58b5c600-df56-11e9-9c19-9a5ba5da54cf.PNG"
+      ]
+    },
+    {
       "name": "Clip",
       "bundleIdentifier": "com.rileytestut.Clip",
       "subtitle": "Manage your clipboard history with ease.",
       "developerName": "Riley Testut",
       "version": "1.0",
       "versionDate": "2020-06-17T12:30:00-07:00",
-      "versionDescription": "Initial version 🎉",
+      "versionDescription": "Initial version ðŸŽ‰",
       "downloadURL": "https://f000.backblazeb2.com/file/altstore/apps/clip/1_0.ipa",
-      "localizedDescription": "Clip is a simple clipboard manager for iOS. \n\nUnlike other clipboard managers, Clip can continue monitoring your clipboard while in the background. No longer do you need to remember to manually open or share to an app to save your clipboard; just copy and paste as you would normally do, and Clip will have your back.\n\nIn addition to background monitoring, Clip also has these features:\n\n• Save text, URLs, and images copied to the clipboard.\n• Copy, delete, or share any clippings saved to Clip.\n• Customizable history limit.\n\nDownload Clip today, and never worry about losing your clipboard again!",
+      "localizedDescription": "Clip is a simple clipboard manager for iOS. \n\nUnlike other clipboard managers, Clip can continue monitoring your clipboard while in the background. No longer do you need to remember to manually open or share to an app to save your clipboard; just copy and paste as you would normally do, and Clip will have your back.\n\nIn addition to background monitoring, Clip also has these features:\n\nâ€¢ Save text, URLs, and images copied to the clipboard.\nâ€¢ Copy, delete, or share any clippings saved to Clip.\nâ€¢ Customizable history limit.\n\nDownload Clip today, and never worry about losing your clipboard again!",
       "iconURL": "https://user-images.githubusercontent.com/705880/63391981-5326f800-c37a-11e9-99d8-760fd06bb601.png",
       "tintColor": "EC008C",
       "size": 445056,
@@ -94,7 +147,7 @@
       "versionDate": "2020-06-17T12:30:00-07:00",
       "versionDescription": "This update adds a Custom Keyboard app extension for quick access to clippings when editing text.\n\nTo enable the keyboard, go to Settings > General > Keyboard > Keyboards > Add New Keyboard... and add \"ClipBoard\". Once added, make sure to then enable \"Allow Full Access\" for ClipBoard so it can access your clippings.",
       "downloadURL": "https://f000.backblazeb2.com/file/altstore/apps/clip/1_1_b1.ipa",
-      "localizedDescription": "Clip is a simple clipboard manager for iOS. \n\nUnlike other clipboard managers, Clip can continue monitoring your clipboard while in the background. No longer do you need to remember to manually open or share to an app to save your clipboard; just copy and paste as you would normally do, and Clip will have your back.\n\nIn addition to background monitoring, Clip also has these features:\n\n• Save text, URLs, and images copied to the clipboard.\n• Copy, delete, or share any clippings saved to Clip.\n• Customizable history limit.\n\nDownload Clip today, and never worry about losing your clipboard again!",
+      "localizedDescription": "Clip is a simple clipboard manager for iOS. \n\nUnlike other clipboard managers, Clip can continue monitoring your clipboard while in the background. No longer do you need to remember to manually open or share to an app to save your clipboard; just copy and paste as you would normally do, and Clip will have your back.\n\nIn addition to background monitoring, Clip also has these features:\n\nâ€¢ Save text, URLs, and images copied to the clipboard.\nâ€¢ Copy, delete, or share any clippings saved to Clip.\nâ€¢ Customizable history limit.\n\nDownload Clip today, and never worry about losing your clipboard again!",
       "iconURL": "https://user-images.githubusercontent.com/705880/63391981-5326f800-c37a-11e9-99d8-760fd06bb601.png",
       "tintColor": "EC008C",
       "size": 462771,
@@ -115,6 +168,25 @@
   ],
   "news": [
     {
+      "title": "Delta Gaining DS Support",
+      "identifier": "delta-ds-support",
+      "caption": "Available this Saturday for patrons, coming soon for everyone else.",
+      "tintColor": "8A28F7",
+      "imageURL": "https://user-images.githubusercontent.com/705880/65603159-0676a400-df5a-11e9-882e-dc5566f4d50a.png",
+      "date": "2019-09-25",
+      "notify": false
+    },
+    {
+      "title": "Delta Now Available",
+      "identifier": "delta-now-available",
+      "caption": "Finally, relive your favorite NES, SNES, GB(C), GBA, and N64 games.",
+      "tintColor": "8A28F7",
+      "imageURL": "https://user-images.githubusercontent.com/705880/65604130-c1ec0800-df5b-11e9-8150-7657c474e3c3.png",
+      "appID": "com.rileytestut.Delta",
+      "date": "2019-09-28",
+      "notify": true
+    },
+    {
       "title": "Sideloading is Here!",
       "identifier": "sideloading-is-here",
       "caption": "Update to AltStore 1.3 to install any app directly from Files.",
@@ -124,14 +196,71 @@
       "notify": true
     },
     {
-      "title": "e!",
-      "identifier": "no",
-      "caption": "never gonna",
-      "tintColor": "FFFFFF",
-      "imageURL": "https://variety.com/wp-content/uploads/2021/07/Rick-Astley-Never-Gonna-Give-You-Up.png?w=681&h=383&crop=1",
-      "url": "https://www.youtube.com/watch?v=dQw4w9WgXcQ",
+      "title": "iOS 13.4 Fixes App Crashes",
+      "identifier": "ios-13-4-now-available",
+      "caption": "Update to iOS 13.4 to fix some sideloaded apps crashing on launch.",
+      "tintColor": "34C759",
+      "date": "2020-04-10T13:30:00-07:00",
+      "notify": false
+    },
+    {
+      "title": "Clip Now Available!",
+      "identifier": "clip-now-available",
+      "caption": "Finally, a clipboard manager that can run in the background â€” no jailbreak required.",
+      "tintColor": "EC008C",
+      "imageURL": "https://user-images.githubusercontent.com/705880/65606598-04afdf00-df60-11e9-8f93-af6345d39557.png",
+      "appID": "com.rileytestut.Clip",
+      "date": "2020-06-17",
+      "notify": true
+    },
+    {
+      "title": "Delta, Meet Nintendo DS",
+      "identifier": "delta-meet-ds",
+      "caption": "Update to Delta 1.3 to relive all your favorite Nintendo DS games.",
+      "tintColor": "8A28F7",
+      "imageURL": "https://user-images.githubusercontent.com/705880/115617602-6ce2b600-a2a6-11eb-984e-2197a30c71e2.png",
+      "appID": "com.rileytestut.Delta",
+      "date": "2021-04-21",
+      "notify": true
+    },
+    {
+      "title": "#StandWithUkraine",
+      "identifier": "support-ukraine",
+      "caption": "Find out how you can help support those impacted by the Russian invasion.",
+      "tintColor": "003e80",
+      "imageURL": "https://user-images.githubusercontent.com/705880/156053447-a158cac7-df5f-4497-8025-15c3c2e10b48.png",
+      "url": "https://linktr.ee/razomforukraine",
+      "date": "2022-03-01",
+      "notify": false
+    },
+    {
+      "title": "The Biggest AltServer Update Yet!",
+      "identifier": "altserver-1-5",
+      "caption": "Update to AltServer 1.5 to use AltJIT and other exciting new features.",
+      "tintColor": "018084",
+      "imageURL": "https://user-images.githubusercontent.com/705880/166509576-744be578-6868-4b7d-b4fd-b9418c084327.png",
+      "url": "https://faq.altstore.io/release-notes/altserver",
+      "date": "2022-05-03",
+      "notify": true
+    },
+    {
+      "title": "More Apps in AltStore!",
+      "identifier": "trusted-sources",
+      "caption": "Update to AltStore 1.5 to easily download some of our favorite apps.",
+      "tintColor": "00CAB3",
+      "imageURL": "https://user-images.githubusercontent.com/705880/167026375-ddcb004f-7160-405c-b3e3-87a6795d2f43.png",
+      "url": "https://faq.altstore.io/release-notes/altstore",
       "date": "2022-05-05",
       "notify": true
+    },
+    {
+      "title": "New to AltStore?",
+      "identifier": "updated-faq",
+      "caption": "Check out our updated guide to learn how to sideload apps!",
+      "tintColor": "018084",
+      "url": "https://faq.altstore.io",
+      "date": "2022-07-28",
+      "notify": false
     }
   ],
   "userInfo": {
